k8_deployments/envoy-gateway/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: "envoygw.wso2.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: envoygw-tls
            kind: Secret
